--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h2 class="font-['Jaro'] text-align: center; text-white text-center text-4xl mb-8">Stardew Valley</h2>
                 <div class="card-content">
                     <div class="img-container">
-                        <img src="/assests/images/Stardew Valley.png" alt="Stardew">
+                        <img src="./assets/images/Stardew Valley.png" alt="Stardew">
                     </div>
                     <div class="requirements_container">
                         <h4>System Requirements</h4>
@@ -96,7 +96,7 @@
                 <h2 class="font-['Jaro'] text-align: center; text-white text-center text-4xl mb-8">Portal</h2>
                 <div class="card-content">
                     <div class="img-container">
-                        <img src="/assests/images/Portal_standalonebox.jpg" alt="Stardew">
+                        <img src="./assets/images/Portal_standalonebox.jpg" alt="Stardew">
                     </div>
                     <div class="requirements_container">
                         <h4>System Requirements</h4>
@@ -136,7 +136,7 @@
                 <h2 class="font-['Jaro'] text-align: center; text-white text-center text-4xl mb-8">Terraria</h2>
                 <div class="card-content">
                     <div class="img-container">
-                        <img src="/assests/images/Terraria.png" alt="Stardew">
+                        <img src="./assets/images/Terraria.png" alt="Stardew">
                     </div>
                     <div class="requirements_container">
                         <h4>System Requirements</h4>
@@ -177,7 +177,7 @@
                 <h2 class="font-['Jaro'] text-align: center; text-white text-center text-4xl mb-8">Undertale</h2>
                 <div class="card-content">
                     <div class="img-container">
-                        <img src="/assests/images/Undertale.png" alt="Stardew">
+                        <img src="./assets/images/Undertale.png" alt="Stardew">
                     </div>
                     <div class="requirements_container">
                         <h4>System Requirements</h4>
@@ -220,7 +220,7 @@
                 <h2 class="font-['Jaro'] text-align: center; text-white text-center text-4xl mb-8">Hotline Miami</h2>
                 <div class="card-content">
                     <div class="img-container">
-                        <img src="/assests/images/Miami.png" alt="Stardew">
+                        <img src="./assets/images/Miami.png" alt="Stardew">
                     </div>
                     <div class="requirements_container">
                         <h4>System Requirements</h4>
@@ -263,7 +263,7 @@
                 <h2 class="font-['Jaro'] text-align: center; text-white text-center text-4xl mb-8">Darkest Dungeon</h2>
                 <div class="card-content">
                     <div class="img-container">
-                        <img src="/assests/images/DUNGEON.PNG" alt="Stardew">
+                        <img src="./assets/images/DUNGEON.PNG" alt="Stardew">
                     </div>
                     <div class="requirements_container">
                         <h4>System Requirements</h4>
@@ -309,7 +309,7 @@
                 </h2>
                 <div class="card-content">
                     <div class="img-container">
-                        <img src="/assests/images/Fallout.png" alt="Stardew">
+                        <img src="./assets/images/Fallout.png" alt="Stardew">
                     </div>
                     <div class="requirements_container">
                         <h4>System Requirements</h4>
@@ -361,7 +361,7 @@
                 </h2>
                 <div class="card-content">
                     <div class="img-container">
-                        <img src="/assests/images/Cult of lamb.png" alt="Stardew">
+                        <img src="./assets/images/Cult of lamb.png" alt="Stardew">
                     </div>
                     <div class="requirements_container">
                         <h4>System Requirements</h4>
@@ -419,7 +419,7 @@
                 </h2>
                 <div class="card-content">
                     <div class="img-container">
-                        <img src="/assests/images/dave-the-diver.jpg" alt="Stardew">
+                        <img src="./assets/images/dave-the-diver.jpg" alt="Stardew">
                     </div>
                     <div class="requirements_container">
                         <h4>System Requirements</h4>
@@ -476,7 +476,7 @@
                 </h2>
                 <div class="card-content">
                     <div class="img-container">
-                        <img src="/assests/images/dishonored.jpg" alt="Stardew">
+                        <img src="./assets/images/dishonored.jpg" alt="Stardew">
                     </div>
                     <div class="requirements_container">
                         <h4>System Requirements</h4>
